--- a/pages/index.html
+++ b/pages/index.html
@@ -4,4 +4,11 @@ title: Talk to Myself
 permalink: /
 ---
 <main role="main" class="page__landing">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                
+            </div>
+        </div>
+    </div>
 </main>
