--- a/pages/index.html
+++ b/pages/index.html
@@ -45,7 +45,7 @@ permalink: /
                     </div>
                 </div>
                 <div class="col-sm-6 col-12 text-left screen-wrapper">
-                    <div class="img-screen position-sm-absolute position-relative">
+                    <div class="img-screen ">
                         <img class="img-fluid img__screen" src="/src/images/ttms-screen@2x.png" alt="Screen">
                     </div>
                 </div>
