--- a/pages/index.html
+++ b/pages/index.html
@@ -7,17 +7,16 @@ permalink: /
     <div class="section__top">
         <div class="container logo-wrapper">
             <div class="row">
-                <div class="col-12 text-center">
-                    <img class="img-fluid" src="/src/images/ttms-logo.svg" alt="Logo">
+                <div class="col-12 text-sm-center text-left">
+                    <div class="title">
+                        <strong> talk to myself</strong> to keep your life recorded
+                    </div>
                 </div>
             </div>
         </div>
         <div class="container content-wrapper">
             <div class="row">
                 <div class="col-sm-6 col-12 text-sm-right text-left text-wrapper">
-                    <div class="title">
-                    <strong>    talk to myself</strong><br>to keep your life recorded
-                    </div>
                     <div class="desc">
                         This is a very simple app to write everything for
                         yourself to make your life recorded.
@@ -32,8 +31,8 @@ permalink: /
                         </div>
                     </div>
                     <div class="small-text">
-                      <strong>  Download app from google play &
-                        App Store </strong><br>(App Store is preparing)
+                        <strong> Download app from google play &
+                            App Store </strong><br>(App Store is preparing)
                     </div>
                     <div class="markets">
                         <div class="apple-store mb-3">
@@ -45,6 +44,7 @@ permalink: /
                     </div>
                 </div>
                 <div class="col-sm-6 col-12 text-left screen-wrapper">
+                    <img class="img-fluid ml-sm-4 ml-0 mt-sm-0 mt-4 pt-sm-0 pt-4"  src="/src/images/ttms-logo.svg" alt="Logo">
                     <div class="img-screen ">
                         <img class="img-fluid img__screen" src="/src/images/ttms-screen@2x.png" alt="Screen">
                     </div>
