--- a/pages/index.html
+++ b/pages/index.html
@@ -4,11 +4,11 @@ title: Talk to Myself
 permalink: /
 ---
 <main role="main" class="page__landing">
-    <div class="section__top">
+    <div class="section__top" >
         <div class="container logo-wrapper">
             <div class="row">
                 <div class="col-12 text-sm-center text-left">
-                    <div class="title">
+                    <div class="title" data-aos="fade-down">
                         <strong> talk to myself</strong> to keep your life recorded
                     </div>
                 </div>
@@ -17,7 +17,7 @@ permalink: /
         <div class="container content-wrapper">
             <div class="row">
                 <div class="col-sm-6 col-12 text-sm-right text-left text-wrapper">
-                    <div class="desc">
+                    <div class="desc" data-aos="fade-right" data-aos-delay="300">
                         This is a very simple app to write everything for
                         yourself to make your life recorded.
                         Simply use this app to write all your personal thoughts
@@ -25,16 +25,16 @@ permalink: /
                         free application but has limitation - old data might be
                         erased. User registration is not required but google
                         account is needed.
-                        <div class="sub-text">
+                        <div class="sub-text" >
                             * talktomyself is a registered trademark of
                             horizon.corp. All right reserved
                         </div>
                     </div>
-                    <div class="small-text">
+                    <div class="small-text" data-aos="fade-right" data-aos-delay="600">
                         <strong> Download app from google play &
                             App Store </strong><br>(App Store is preparing)
                     </div>
-                    <div class="markets">
+                    <div class="markets" data-aos="fade-right" data-aos-delay="900">
                         <div class="apple-store mb-3">
                             <img class="img-fluid img__apple-store" src="/src/images/apple-store@2x.png" alt="Appstore">
                         </div>
@@ -44,9 +44,9 @@ permalink: /
                     </div>
                 </div>
                 <div class="col-sm-6 col-12 text-left screen-wrapper">
-                    <img class="img-fluid ml-sm-4 ml-0 mt-sm-0 mt-4 pt-sm-0 pt-4"  src="/src/images/ttms-logo.svg" alt="Logo">
+                    <img class="img-fluid ml-sm-4 ml-0 mt-sm-0 mt-4 pt-sm-0 pt-4"  src="/src/images/ttms-logo.svg" alt="Logo"  data-aos="fade-left" data-aos-delay="1200">
                     <div class="img-screen ">
-                        <img class="img-fluid img__screen" src="/src/images/ttms-screen@2x.png" alt="Screen">
+                        <img class="img-fluid img__screen" src="/src/images/ttms-screen@2x.png" alt="Screen"  data-aos="fade-left" data-aos-delay="1500">
                     </div>
                 </div>
             </div>
@@ -56,8 +56,8 @@ permalink: /
     <div class="section__copyright">
         <div class="container">
             <div class="row">
-                <div class="col-12 text-center">
-                    <p class="copyright-text">
+                <div class="col-12 text-center"  data-aos="fade-top" data-aos-delay="1800">
+                    <p class="copyright-text" >
                         © Horizon Corporation
                     </p>
                 </div>
